# r-type

./: .gitignore  CMakeLists.txt  README.md  clean.sh  compile.sh
assets/entities/: AudioListener.json  Background.json  BlasterA.json  BlasterB.json  BlasterBullet.json  BlasterC.json  Boss.json  BossLaser.json  BossMinion.json  BossMinion2.json  Collider.json  ColliderSystem.json  CrawlerA.json  CrawlerB.json  CrawlerBullet.json  CrawlerC.json  DefaultGun.json  EnemyBullet.json  EnemyLeaderPhibonacci.json  EnemyPhibonacci.json  EnergyShot.json  FormationA.json  FormationB.json  GameScene.json  GasBullet.json  GasExplosion.json  GravitationForce.json  HealBonus.json  HelloWorld.json  Laser.json  MenuScene.json  Missile.json  MissileShooter.json  MomsKnife.json  MultiPlayerScene.json  PlasmaShot.json  Player.json  PlayerBullet.json  PlayerInputs.json  PlayerShip.json  (+30 more)
assets/entities/asteroids/: BackLarge.json  BackMedium.json  BackSmall.json  Large.json  Medium.json  Small.json
assets/entities/explosions/: Large.json  Medium.json  Small.json
assets/entities/menu/: Menu.json  MenuBackground.json  MenuIP.json  MenuIPText.json  MenuIdRoom.json  MenuIdRoomText.json  MenuJoin.json  MenuLabel.json  MenuMultiplayer.json  MenuMultiplayersBack.json  MenuOnePlayer.json  MenuOptions.json  MenuPort.json  MenuPortText.json  MenuTitle.json  MenuVolume.json  MenuVolumeCone.json  ParallaxMenu.json
assets/shaders/blink/: blink.frag  blink.vert
assets/shaders/minimum/: minimum.frag
assets/shaders/pixel/: pixel.frag  pixel.vert
assets/shaders/wave/: wave.vert
docs/: rfcR-TYPE.xml
docs/uml/: Client.dia  ECS.dia  Library.dia  Network.dia  Server.dia
lib/: jsoncpp_windows_x86.lib  jsoncpp_windows_x86_DEBUG.lib
src/Components/: TemplateComponent.cpp  TemplateComponent.hpp  create_component.sh
src/Components/AnimationDeleter/: AnimationDeleterComponent.cpp  AnimationDeleterComponent.hpp
src/Components/Animations/: AnimationsComponent.cpp  AnimationsComponent.hpp  IAnimations.hpp
src/Components/Asteroid/: AsteroidComponent.cpp  AsteroidComponent.hpp  IAsteroid.hpp
src/Components/AsteroidSpawner/: AsteroidSpawnerComponent.cpp  AsteroidSpawnerComponent.hpp
src/Components/Attack/: AttackComponent.cpp  AttackComponent.hpp
src/Components/AudioListener/: AudioListenerComponent.cpp  AudioListenerComponent.hpp
src/Components/AudioSource/: AudioSourceComponent.cpp  AudioSourceComponent.hpp  IAudioSource.hpp
src/Components/Background/: BackgroundComponent.cpp  BackgroundComponent.hpp
src/Components/Behavior/: BehaviorComponent.cpp  BehaviorComponent.hpp  EntitySeeker.hpp  IBehavior.hpp
src/Components/Boss/: BossComponent.cpp  BossComponent.hpp
src/Components/BulletComponent/: BulletComponent.cpp  BulletComponent.hpp  IBullet.hpp
src/Components/Button/: AbstractButton.cpp  AbstractButton.hpp  ButtonComponent.cpp  ButtonComponent.hpp  IButton.hpp  JoinButtonComponent.cpp  JoinButtonComponent.hpp  OnePlayerButtonComponent.cpp  OnePlayerButtonComponent.hpp
src/Components/Collider/: Collider.cpp  Collider.hpp
src/Components/ColliderSystem/: ColliderSystem.cpp  ColliderSystem.hpp  ICollider.hpp  IColliderSystem.hpp  ICollision.hpp
src/Components/DestroyEvent/: DestroyEventComponent.cpp  DestroyEventComponent.hpp  IDestroyEvent.hpp
src/Components/EnnemyCollision/: EnnemyCollision.cpp  EnnemyCollision.hpp
src/Components/Explosive/: ExplosiveComponent.cpp  ExplosiveComponent.hpp
src/Components/FadeOut/: FadeOutComponent.cpp  FadeOutComponent.hpp  IFadeOut.hpp
src/Components/Force/: AForce.hpp
src/Components/Formation/: FormationComponent.cpp  FormationComponent.hpp
src/Components/GlobalBlinkShader/: GlobalBlinkShaderComponent.cpp  GlobalBlinkShaderComponent.hpp
src/Components/GlobalPixelShader/: GlobalPixelShaderComponent.cpp  GlobalPixelShaderComponent.hpp
src/Components/GravitationForce/: GravitationForce.cpp  GravitationForce.hpp
src/Components/HealBonus/: HealBonus.cpp  HealBonus.hpp
src/Components/HelloWorld/: HelloWorldComponent.cpp  HelloWorldComponent.hpp
src/Components/KonamiCode/: KonamiCodeComponent.cpp  KonamiCodeComponent.hpp
src/Components/LaserBoss/: LaserBossComponent.cpp  LaserBossComponent.hpp
src/Components/LaserCollider/: LaserColliderComponent.cpp  LaserColliderComponent.hpp
src/Components/Layer/: LayerComponent.cpp  LayerComponent.hpp
src/Components/Menu/: MenuComponent.cpp  MenuComponent.hpp
src/Components/MusicPlayer/: MusicPlayerComponent.cpp  MusicPlayerComponent.hpp
src/Components/ParentDependent/: ParentDependentComponent.cpp  ParentDependentComponent.hpp
src/Components/PixelShader/: PixelShaderComponent.cpp  PixelShaderComponent.hpp
src/Components/Player/: IPlayerComponent.hpp  PlayerComponent.cpp  PlayerComponent.hpp
src/Components/PlayerColorize/: IPlayerColorize.hpp  PlayerColorizeComponent.cpp  PlayerColorizeComponent.hpp
src/Components/PlayerController/: PlayerControllerComponent.cpp  PlayerControllerComponent.hpp
src/Components/PlayerInputs/: APlayerControllable.hpp  IPlayerInputs.hpp  PlayerInputsComponent.cpp  PlayerInputsComponent.hpp
src/Components/PlayerShip/: IPlayerShip.hpp  PlayerShipComponent.cpp  PlayerShipComponent.hpp
src/Components/QueenFly/: QueenFlyComponent.cpp  QueenFlyComponent.hpp
src/Components/Scene/: SceneComponent.cpp  SceneComponent.hpp
src/Components/Score/: IScore.hpp  ScoreComponent.cpp  ScoreComponent.hpp
src/Components/SelfDestruction/: SelfDestructionComponent.cpp  SelfDestructionComponent.hpp
src/Components/Shader/: IShader.hpp  ShaderComponent.cpp  ShaderComponent.hpp
src/Components/ShootableEnemy/: IShootableEnemy.hpp  ShootableEnemy.cpp  ShootableEnemy.hpp
src/Components/SoundPlayer/: SoundPlayerComponent.cpp  SoundPlayerComponent.hpp
src/Components/SpeedBonus/: SpeedBonus.cpp  SpeedBonus.hpp
src/tests/: AdvancedPlugin.cpp  AdvancedPlugin.hpp  Audio.cpp  EmptyPlugin.cpp  EmptyPlugin.hpp  Graphics.cpp  IHelloPlugin.hpp  LibraryLoading.cpp  TestBinaryStream.cpp  TestJson.cpp  TestThreadPool.cpp  UdpClient.cpp  UdpServer.cpp
(+114 files in other folders)
